"Improve code cleanliness and robustness"
This commit undertakes several changes across multiple files to improve code cleanliness, robustness, and efficiency. Minor changes were made in the Global.yml and ReaderHistory.json files for cleanup. In the ScreenStream.java file, an additional condition added to prevent potential null pointer exceptions. The Core.java file saw the removal of unnecessary empty lines. In ProcessHistory.json, DNProcess has been updated.

Significant robustness addition was seen in JVMExecutor.java to handle ports assignment more efficiently and guard against blocking elements during the deletion of directories. Updates in IJVMExecutor.java include code to handle InaccessibleObjectException gracefully.

In essence, this commit's changes focus on enhancing the robustness of the system & cleaning up the unnecessary pieces of code.